@@ -26,7 +26,6 @@ package SPVM::CORE {
   }
   
   native sub rand : int ($seed_ref : int&);
-  native sub sleep : void ($seconds : long);
   
   precompile sub lc : string($str : string) {
     
