@@ -1,0 +1,3 @@
+package SPVM::Unistd {
+  native sub sleep : void ($seconds : long);
+}
