@@ -14,6 +14,9 @@
   - add SPVM::Sort;
   - move SPVM::CORE::sortb, sorts, sorti, sortl, sortf, sortd, sorto to SPVM::Sort
   - If SPVM::call_sub argument is array of any object and element is non-ref scalar, it is encoded to UTF-8 and converted to byte[]
+  - add SPVM::Unistd
+  - move SPVM::CORE::sleep to SPVM::Unistd
+
 0.0436 2019-06-06
   - allow switch case byte constant. byte constant is converted to int constant.
   - add $ to string escape character
